--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div>
-        <span style="color: #48535e;font-size: 30px;margin-right: 31px;outline: none;font-family: Arial, Helvetica, sans-serif;">{{bmxItem.componentText}}</span>
+        <span style="color: #48535e;font-size: 30px;outline: none;font-family: Arial, Helvetica, sans-serif;">{{bmxItem.componentText}}</span>
     </div>
     <div>
         <button (click)="toggleInstructions()" style="margin-right: 33px;" mat-icon-button matTooltip="Instructions"
