--- a/src/app/bmx/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.scss
@@ -165,17 +165,7 @@
     .paragraph {
         margin-top: 10px;
         position: relative;
-        .edit-icon {
-            display: none;
-        }
-        .cancel {
-            outline: none;
-            position: absolute;
-            margin: 10px;
-            right: 0px;
-            z-index: 999999;
-            top: 477px;
-        }
+        
         .save {
             outline: none;
             position: absolute;
@@ -192,7 +182,7 @@
             outline: none;
             position: absolute;
             margin: 10px;
-            bottom: 0;
+            top: 0;
             right: 0;
         }
     }
