--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -1,14 +1,12 @@
+
+<button *ngIf="openSettings && bmxClientPageOverview" class="cancel" (click)="openSettings = !openSettings" mat-icon-button>
+    <mat-icon  class="full-icon" style="font-size: 25px;">cancel</mat-icon>
+</button>
+<button *ngIf="!openSettings && bmxClientPageOverview" mat-icon-button class="edit-icon" (click)="openSettings = !openSettings">
+    <mat-icon  class="full-icon" style="font-size: 25px;">edit</mat-icon>
+</button>
 <div style="margin: 30px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
-<ckeditor  *ngIf="bmxClientPageOverview" id="txtTexto" class="ckeditorcev" style="animation: fadeIn 0.5s ease forwards;"
+<ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev" style="animation: fadeIn 0.5s ease forwards;"
     [ngModelOptions]="{standalone: true}" [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText"
     [config]="ckconfig">
 </ckeditor>
-
-<button *ngIf="bmxClientPageOverview" class="cancel" (click)="bmxClientPageOverview = !bmxClientPageOverview"
-    mat-icon-button>
-    <mat-icon style="font-size: 25px;">cancel</mat-icon>
-</button>
-<button *ngIf="!bmxClientPageOverview" mat-icon-button class="edit-icon"
-    (click)="bmxClientPageOverview = !bmxClientPageOverview">
-    <mat-icon style="font-size: 25px;">edit</mat-icon>
-</button>
