changing director name and image uploader

--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -13,7 +13,7 @@
             <div class="row-field">
                 <label class="selectLabels">Salesboard</label>
                 <mat-form-field appearance="outline">
-                    <input type="text" [readonly]="isReadonly" placeholder="Enter Salesboard Project" formControlName="bmxSalesboard" matInput
+                    <input type="text" placeholder="Enter Salesboard Project" formControlName="bmxSalesboard" matInput
                         [matAutocomplete]="auto">
                     <mat-autocomplete #auto="matAutocomplete">
                         <mat-option *ngFor="let settingsList of filteredOptions | async" [value]="settingsList">
@@ -84,11 +84,22 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-
+                <mat-form-field appearance="outline">
+                    <mat-label>Director</mat-label>
+                        <mat-select [(ngModel)]="dName">
+                            <mat-option *ngFor="let directorName of currentDirectorList">
+                                {{directorName.name}}
+                            </mat-option>   
+                        </mat-select>
+                </mat-form-field>
 
 
                 <button mat-mini-fab style="background-color:#063074;outline: none;"
                 (click)="createDirector()">
+                <mat-icon class="full-icon" style="color: white;" >add</mat-icon>
+            </button>
+            <button mat-mini-fab style="background-color:#063074;outline: none;"
+                (click)="createCustomDirector()">
                 <mat-icon class="full-icon" style="color: white;" >add</mat-icon>
             </button>
             </div>
