new category description add it

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
@@ -4,10 +4,10 @@
         <img style="width: 231px;margin-left: 8px;margin-top: 60px;"
             [src]="bmxItem.componentSettings[0].brandInstituteURL">
 
-        <div style="margin-left: 50px;">
+        <!-- <div style="margin-left: 50px;">
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;">CATEGORY HEADER HERE</div>
             <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div>
-        </div>
+        </div> -->
     </div>
     <div>
         <span style="color: #48535e;font-size: 30px;outline: none;font-family: Arial, Helvetica, sans-serif;">{{bmxItem.componentText}}</span>
