--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -29,8 +29,15 @@
 
 
 <!-- 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 CONFIG BOX 🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧🔧 -->
-<div *ngIf="i === selectedIndex" class="mat-elevation-z4"
-    style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: aliceblue 5px solid;">
+<div *ngIf="i === selectedIndex" class="mat-elevation-z4" cdkDrag
+    style="position: absolute;width: 62vw;background: #fafafa;z-index: 1;top: -8px;left: 15%;border: grey 5px solid;">
+    <div style="position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #ccc;
+    cursor: move;
+    width: 1024px;
+    height: 54px;" cdkDragHandle> </div>
     <div style="text-align: center;">
         <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
         <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
@@ -42,6 +49,18 @@
                 placeholder="ENHANCE,Hance, En-,EVOLVE,Evo,GUARD,Gard, Guard,INVEST,In, Inv,OMNI,Omni,OPTIMAL"></textarea>
         </mat-form-field>
     </div>
+
+    <hr>
+    <div style="display: flex;flex-direction: row;justify-content: center;gap: 30px;">
+        
+        <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
+         [value]="bmxItem.componentSettings[0].categoryName" style="font-size: 20px;color: #324395;padding-bottom: 10px;">
+        <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription" 
+        [value]="bmxItem.componentSettings[0].categoryDescription" style="font-size: 20px;color: #ee7f25;padding-bottom: 20px;">
+        
+    </div>
+
+
     <hr>
     <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
         <div>
@@ -99,43 +118,49 @@
 <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    width: 86%;
+    width: 80%;
     position: absolute;
     top: -50px;
     left: 40px;
     border-radius: 15px;">
 
     <div style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;">columns width: {{columnsSlider}} px</p>
-        <input type="range" style="margin: 20px;width: 140px;" (change)="setColumnWidth(columnsSlider)"
-            [(ngModel)]="columnsSlider" class="slider-font-size" tickInterval="1" min="50" max="1000"
-            [value]="columnsSlider">
+        <p style="margin: 0 0 -12px;color: grey;">columns width: {{bmxItem.componentSettings[0].columnWidth}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" 
+            [(ngModel)]="bmxItem.componentSettings[0].columnWidth" class="slider-font-size" tickInterval="1" min="50" max="1000"
+            [value]="bmxItem.componentSettings[0].columnWidth">
     </div>
     <div style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;">ratinale width: {{rationalewidth}} px</p>
-        <input type="range" style="margin: 20px;width: 140px;" (change)="setRationalewidth(rationalewidth)"
-            [(ngModel)]="rationalewidth" class="slider-font-size" tickInterval="1" min="50" max="1000"
-            [value]="rationalewidth">
+        <p style="margin: 0 0 -12px;color: grey;">ratinale width: {{bmxItem.componentSettings[0].rationalewidth}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;" 
+            [(ngModel)]="bmxItem.componentSettings[0].rationalewidth" class="slider-font-size" tickInterval="1" min="50" max="1000"
+            [value]="bmxItem.componentSettings[0].rationalewidth">
     </div>
     <div style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;">font size: {{fontSizeRow}} px</p>
-        <input type="range" style="margin: 20px;width: 140px;" (change)="setFontSize(fontSizeRow)"
-            [(ngModel)]="fontSizeRow" class="slider-font-size" tickInterval="1" min="2" max="40" [value]="fontSizeRow">
-    </div>
-    <div style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;">row height: {{rowHeightSlider}} px</p>
+        <p style="margin: 0 0 -12px;color: grey;">font size: {{bmxItem.componentSettings[0].fontSize}} px</p>
         <input type="range" style="margin: 20px;width: 140px;"
-            (change)="setSMALLTextLengthColumnHeight(rowHeightSlider)" [(ngModel)]="rowHeightSlider"
-            class="slider-font-size" tickInterval="1" min="2" max="20" [value]="rowHeightSlider">
+            [(ngModel)]="bmxItem.componentSettings[0].fontSize" class="slider-font-size" tickInterval="1" min="2" max="40" [value]="bmxItem.componentSettings[0].fontSize">
+    </div>
+    <div style="display: flex;flex-direction: column;align-items: center;">
+        <p style="margin: 0 0 -12px;color: grey;">row height: {{bmxItem.componentSettings[0].rowHeight}} px</p>
+        <input type="range" style="margin: 20px;width: 140px;"
+             [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
+            class="slider-font-size" tickInterval="1" min="2" max="20" [value]="bmxItem.componentSettings[0].rowHeight">
     </div>
 </div>
-<!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="columnsSlider"></mat-slider><p>{{columnsSlider}}</p> -->
+<!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="bmxItem.componentSettings[0].columnWidth"></mat-slider><p>{{bmxItem.componentSettings[0].columnWidth}}</p> -->
 <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
 
 
 <!--💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲 TABLE GENERATOR 💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲-->
 <div class="scroller-style main-container"  dragula="DRAGGABLE_ROW"  [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
+    <div style="display: flex;flex-direction: column;width: 85vw;">
+        
+        <div style="font-size: 25px;color: #324395;padding-bottom: 10px;">{{bmxItem.componentSettings[0].categoryName}}</div>
+        <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">{{bmxItem.componentSettings[0].categoryDescription}}</div>
+        
+    </div>
     <div *ngFor="let testName of bmxItem.componentText; let y = index">
 
         <!-- <div *ngIf="(y !== 0)" style="color: white;font-size: xx-small;">.</div> -->
@@ -143,7 +168,7 @@
             <div *ngFor="let columnName of columnsNames; let e =  index"
                 style="display: flex;align-items: center;justify-content: center;" 
                 [ngClass]="(e%2==0)?'red':'blue'"
-                [style.width]="(columnName == 'rationale' )?rationalewidth + 'px':columnsSlider +'px'">
+                [style.width]="(columnName == 'rationale' )?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'">
 
                 <div *ngIf="(y == 0)" class="header-title" (mouseenter)="selectedColumn = e"
                     (mouseleave)="selectedColumn = ''">
@@ -154,14 +179,14 @@
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
-                    <textarea *ngIf="y == 0 && bmxClientPageDesignMode" [style.font-size]="fontSizeRow +'px'"
+                    <textarea *ngIf="y == 0 && bmxClientPageDesignMode" [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                         style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
                         [(ngModel)]="testName[columnName]" value="testName[columnName]"></textarea>
 
                     <!-- <textarea *ngIf=" bmxClientPageDesignMode " 
-                        [style.width]="rationalewidth + 'px'" 
-                            [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize
-                            [cdkAutosizeMinRows]="(testName[columnName].length > 50)?rowHeightSlider:2"
+                        [style.width]="bmxItem.componentSettings[0].rationalewidth + 'px'" 
+                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
+                            [cdkAutosizeMinRows]="(testName[columnName].length > 50)?bmxItem.componentSettings[0].rowHeight:2"
                             style="outline: none;text-align: center;" class="row-box"
                             [(ngModel)]="testName[columnName]"></textarea>cev -->
 
@@ -169,7 +194,7 @@
 
 
                     <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"
-                        [style.font-size]="fontSizeRow +'px'" *ngIf=" !bmxClientPageDesignMode">{{testName[columnName]}}
+                        [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" *ngIf=" !bmxClientPageDesignMode">{{testName[columnName]}}
                     </p>
                 </div>
 
@@ -186,22 +211,22 @@
 
                     <!-- TEXT_AREA COLUMN-->
                     <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true"
-                        [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
-                        [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="rowHeightSlider"
+                        [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
+                        [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
                         style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;"
                         class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
 
 
                     <textarea
                         *ngIf="y !== 0  && bmxClientPageDesignMode && (columnName.includes('Radio Column') != true) &&  columnName.includes('Comments') != true"
-                        [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
-                        [style.font-size]="fontSizeRow +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="rowHeightSlider"
+                        [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
+                        [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
                         style="outline: none;text-align: center;" class="row-box"
                         [(ngModel)]="testName[columnName]"></textarea>
 
                     <p *ngIf="y !== 0  && !bmxClientPageDesignMode && (columnName.includes('Radio Column') != true) &&  columnName.includes('Comments') != true"
-                        [style.font-size]="fontSizeRow +'px'"
-                        [style.width]="(columnName == 'rationale')?rationalewidth + 'px':columnsSlider +'px'"
+                        [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
+                        [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
                         style="text-align: center;margin: 0 0 0px;">{{testName[columnName]}}</p>
                 </div>
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
@@ -215,7 +240,7 @@
                     <div *ngIf="testName.CRITERIA; else elseBlock">
                         <div *ngFor="let criteria of testName.CRITERIA  let x =  index"
                             style="display: flex;flex-direction: column;justify-content: space-between;border-bottom: rgb(231, 230, 230) 1px solid;">
-                            <span [style.font-size]="fontSizeRow +'px'"
+                            <span [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                 style="padding-top:6px;max-width: 200px;">{{criteria.name}}</span>
                             <div style="min-width: 200px;padding-bottom:6px">
                                 <button *ngFor="let star of  criteria.STARS;" (click)="setCriteriaRating(star.id,x,y)"
