--- a/src/app/bmx/bmx-creator/project-information/project-information.component.scss
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.scss
@@ -4,3 +4,13 @@
     justify-content: space-around;
     align-items: baseline;
 }
+
+.directorInfo{
+    outline: none;
+  box-shadow: none;
+}
+
+.directorInfo:focus{
+  box-shadow: revert ;
+  outline: revert;
+}
