--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -103,13 +103,64 @@
                     <mat-icon class="full-icon" style="color: white;">add</mat-icon>
                 </button>
                 <button mat-mini-fab style="background-color:#063074;outline: none;" (click)="createCustomDirector()">
-                    <mat-icon class="full-icon" style="color: white;">add</mat-icon>
+                    <mat-icon class="full-icon" style="color: white;">highlight_alt</mat-icon>
                 </button>
             </div>
 
         </div>
     </form>
 
-    
+    <div style="display: flex; flex-direction: row;flex-wrap: wrap;justify-content: space-between;margin: 10px 71px;">
+        <div *ngFor="let director of DIRECTORS; let i = index; trackBy: trackByIndex">
+            <mat-card class="directorCard" style="margin:20px 0px;width: 400px;">
+
+                <div style="display: flex;flex-direction: row;">
+                    <div style="margin-right: 6px;" class="selectLabels">Director: </div>
+                    <input class="directorInfo" [(ngModel)]="DIRECTORS[i].name" placeholder="Director"
+                        [readonly]="i !== canEdit" matInput style="width:75%">
+                </div>
+
+                
+                    <div style="display: flex;flex-direction: row;">
+                        <div style="margin-right: 6px;" class="selectLabels">Title: </div>
+                        <input class="directorInfo" [(ngModel)]="DIRECTORS[i].title" placeholder="Title"
+                        [readonly]="i !== canEdit" matInput style="width:75%">
+                    </div>yo
+
+                    <div style="display: flex;flex-direction: row;">
+                        <div style="margin-right: 6px;" class="selectLabels">Email: </div>
+                        <input class="directorInfo" [(ngModel)]="DIRECTORS[i].email" placeholder="Email"
+                        [readonly]="i !== canEdit" matInput style="width:75%">
+                    </div>
+
+                    <div style="display: flex;flex-direction: row;">
+                        <div style="margin-right: 6px;" class="selectLabels">Phone #: </div>
+                        <input class="directorInfo" [(ngModel)]="DIRECTORS[i].phone" placeholder="Phone"
+                        [readonly]="i !== canEdit" matInput style="width:75%">
+                    </div>
+                    <div *ngIf="canEdit !== i; else elseBlock">
+                        <button mat-icon-button style="position: absolute; top: 9px; right: 5px;color: grey;"
+                            (click)="editDirector(i)">
+                            <mat-icon>build</mat-icon>
+                        </button>
+
+                    </div>
+
+                    <ng-template #elseBlock>
+                        <button mat-icon-button style="position: absolute; top: 9px; right: 5px;color: grey;"
+                            (click)="editDirector(i)">
+                            <mat-icon>cached</mat-icon>
+                        </button>
+                    </ng-template>
+                    <button mat-icon-button style="position: absolute; top: 45px; right: 5px;color: red;"
+                        (click)="removeDirector(i)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                
+            </mat-card>
+
+
+        </div>
+    </div>
     <br>
     <br>
