--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -102,7 +102,7 @@
                 <button mat-mini-fab style="background-color:#063074;outline: none;" (click)="createDirector()">
                     <mat-icon class="full-icon" style="color: white;">add</mat-icon>
                 </button>
-                <button mat-mini-fab style="background-color:#063074;outline: none;" (click)="createCustomDirector()">
+                <button mat-mini-fab style="background-color:#067418;outline: none;" (click)="createCustomDirector()">
                     <mat-icon class="full-icon" style="color: white;">highlight_alt</mat-icon>
                 </button>
             </div>
@@ -125,7 +125,7 @@
                         <div style="margin-right: 6px;" class="selectLabels">Title: </div>
                         <input class="directorInfo" [(ngModel)]="DIRECTORS[i].title" placeholder="Title"
                         [readonly]="i !== canEdit" matInput style="width:75%">
-                    </div>yo
+                    </div>
 
                     <div style="display: flex;flex-direction: row;">
                         <div style="margin-right: 6px;" class="selectLabels">Email: </div>
