--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -99,10 +99,10 @@
 
 
 
-                <button mat-mini-fab style="background-color:#063074;outline: none;" (click)="createDirector()">
+                <button mat-mini-fab style="background-color:#063074;outline: none;" matTooltip="add director" matTooltipPosition="above" (click)="createDirector()">
                     <mat-icon class="full-icon" style="color: white;">add</mat-icon>
                 </button>
-                <button mat-mini-fab style="background-color:#067418;outline: none;" (click)="createCustomDirector()">
+                <button mat-mini-fab style="background-color:#067418;outline: none;" matTooltip="add new user" matTooltipPosition="above" (click)="createCustomDirector()">
                     <mat-icon class="full-icon" style="color: white;">highlight_alt</mat-icon>
                 </button>
             </div>
@@ -110,7 +110,7 @@
         </div>
     </form>
 
-    <div style="display: flex; flex-direction: row;flex-wrap: wrap;justify-content: space-between;margin: 10px 71px;">
+    <div style="display: flex; flex-direction: row;flex-wrap: wrap;justify-content: space-between;margin: 10px 39px;">
         <div *ngFor="let director of DIRECTORS; let i = index; trackBy: trackByIndex">
             <mat-card class="directorCard" style="margin:20px 0px;width: 400px;">
 
